# physical-ai-and-humanoid-robotics

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md
backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start_server.py  vercel.json
backend/.railway/: config.yml
backend/docs/: error-documentation.md  runbooks.md
backend/scripts/: direct_ingest.py  init_db.py  run_migration.py
backend/scripts/migrations/: 004_add_oauth_fields.sql  004_add_oauth_fields_rollback.sql  005_add_profile_fields.sql  005_add_profile_fields_rollback.sql
backend/src/: __init__.py  config.py  logging_config.py  main.py
backend/src/agent/: __init__.py  cleanup_scheduler.py  indexing_agent.py  logging_agent.py  main.py  orchestrator.py  rag_agent.py
backend/src/agents/: __init__.py  answer.py  citation.py  orchestrator.py  personalization.py  retrieval.py  session.py  translation.py
backend/src/api/: __init__.py  auth.py  chat.py  feature_flags.py  gemini_adapter.py  health.py  ingest.py  logging.py  main.py  metrics.py  middleware.py  oauth.py  personalize.py  profile.py  security_audit.py  sessions.py  telemetry.py  translate.py
backend/src/db/: __init__.py  connection.py  models.py  postgres_client.py  qdrant_client.py  queries.py  schema_evolution.py
backend/src/rag/: __init__.py  chunker.py  embedder.py  optimized_retriever.py  retriever.py
backend/src/services/: __init__.py  cache.py  chunking.py  code_extractor.py  embeddings.py  qdrant.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_chat.py  test_ingest.py
(+253 files in other folders)
