[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG Chatbot backend for Docusaurus textbook"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "openai-agents>=0.0.3",
    "tiktoken>=0.8.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.0.0",
    "argon2-cffi>=23.1.0",
    "python-frontmatter>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
